

CREATE TABLE Passenger (
    passenger_id     NUMBER GENERATED BY DEFAULT AS IDENTITY (START WITH 100),
    first_name       VARCHAR2(50) NOT NULL,
    last_name        VARCHAR2(50) NOT NULL,
    gender           VARCHAR2(10) CHECK (gender IN ('Male', 'Female', 'Other')),
    date_of_birth    DATE NOT NULL,
    email            VARCHAR2(100) NOT NULL,
    phone            VARCHAR2(15),
    passport_number  VARCHAR2(20),
    created_at       DATE DEFAULT SYSDATE NOT NULL,
    CONSTRAINT pk_passenger PRIMARY KEY (passenger_id),
    CONSTRAINT uq_passenger_email UNIQUE (email),
    CONSTRAINT uq_passenger_passport UNIQUE (passport_number)
);

CREATE TABLE Flight (
    flight_id       NUMBER GENERATED BY DEFAULT AS IDENTITY (START WITH 100),
    flight_number   VARCHAR2(10) NOT NULL,
    airline_name    VARCHAR2(80) DEFAULT 'SkyWay Airlines' NOT NULL,
    source_city     VARCHAR2(60) NOT NULL,
    destination_city VARCHAR2(60) NOT NULL,
    base_fare       NUMBER(10,2) NOT NULL,
    status          VARCHAR2(20) DEFAULT 'Active' NOT NULL,
    CONSTRAINT pk_flight PRIMARY KEY (flight_id),
    CONSTRAINT uq_flight_number UNIQUE (flight_number),
    CONSTRAINT chk_flight_route CHECK (source_city <> destination_city),
    CONSTRAINT chk_flight_base_fare CHECK (base_fare > 0),
    CONSTRAINT chk_flight_status CHECK (status IN ('Active', 'Inactive'))
);

CREATE TABLE Schedule (
    schedule_id     NUMBER GENERATED BY DEFAULT AS IDENTITY (START WITH 100),
    flight_id       NUMBER NOT NULL,
    departure_time  TIMESTAMP NOT NULL,
    arrival_time    TIMESTAMP NOT NULL,
    aircraft_type   VARCHAR2(40) NOT NULL,
    total_seats     NUMBER NOT NULL,
    available_seats NUMBER NOT NULL,
    schedule_status VARCHAR2(20) DEFAULT 'Scheduled' NOT NULL,
    CONSTRAINT pk_schedule PRIMARY KEY (schedule_id),
    CONSTRAINT fk_schedule_flight FOREIGN KEY (flight_id)
        REFERENCES Flight(flight_id),
    CONSTRAINT chk_schedule_times CHECK (arrival_time > departure_time),
    CONSTRAINT chk_schedule_total_seats CHECK (total_seats > 0),
    CONSTRAINT chk_schedule_available CHECK (available_seats BETWEEN 0 AND total_seats),
    CONSTRAINT chk_schedule_status CHECK (
        schedule_status IN ('Scheduled', 'Delayed', 'Cancelled', 'Completed')
    )
);

CREATE TABLE Seat (
    seat_id       NUMBER GENERATED BY DEFAULT AS IDENTITY (START WITH 100),
    schedule_id   NUMBER NOT NULL,
    seat_number   VARCHAR2(5) NOT NULL,
    seat_class    VARCHAR2(20) DEFAULT 'Economy' NOT NULL,
    seat_status   VARCHAR2(20) DEFAULT 'Available' NOT NULL,
    CONSTRAINT pk_seat PRIMARY KEY (seat_id),
    CONSTRAINT fk_seat_schedule FOREIGN KEY (schedule_id)
        REFERENCES Schedule(schedule_id),
    CONSTRAINT uq_seat_schedule_number UNIQUE (schedule_id, seat_number),
    CONSTRAINT chk_seat_class CHECK (seat_class IN ('Economy', 'Premium Economy', 'Business', 'First')),
    CONSTRAINT chk_seat_status CHECK (seat_status IN ('Available', 'Booked', 'Blocked'))
);

CREATE TABLE Reservation (
    reservation_id    NUMBER GENERATED BY DEFAULT AS IDENTITY (START WITH 100),
    passenger_id      NUMBER NOT NULL,
    schedule_id       NUMBER NOT NULL,
    seat_id           NUMBER NOT NULL,
    reservation_date  DATE DEFAULT SYSDATE NOT NULL,
    travel_class      VARCHAR2(20) DEFAULT 'Economy' NOT NULL,
    reservation_status VARCHAR2(20) DEFAULT 'Confirmed' NOT NULL,
    fare_amount       NUMBER(10,2) NOT NULL,
    CONSTRAINT pk_reservation PRIMARY KEY (reservation_id),
    CONSTRAINT fk_reservation_passenger FOREIGN KEY (passenger_id)
        REFERENCES Passenger(passenger_id),
    CONSTRAINT fk_reservation_schedule FOREIGN KEY (schedule_id)
        REFERENCES Schedule(schedule_id),
    CONSTRAINT fk_reservation_seat FOREIGN KEY (seat_id)
        REFERENCES Seat(seat_id),
    CONSTRAINT chk_reservation_class CHECK (
        travel_class IN ('Economy', 'Premium Economy', 'Business', 'First')
    ),
    CONSTRAINT chk_reservation_status CHECK (
        reservation_status IN ('Confirmed', 'Cancelled', 'Checked-In')
    ),
    CONSTRAINT chk_reservation_fare CHECK (fare_amount >= 0)
);

CREATE TABLE Payment (
    payment_id      NUMBER GENERATED BY DEFAULT AS IDENTITY (START WITH 100),
    reservation_id  NUMBER NOT NULL,
    payment_date    DATE DEFAULT SYSDATE NOT NULL,
    amount          NUMBER(10,2) NOT NULL,
    payment_method  VARCHAR2(30) NOT NULL,
    payment_status  VARCHAR2(20) DEFAULT 'Paid' NOT NULL,
    transaction_ref VARCHAR2(40),
    CONSTRAINT pk_payment PRIMARY KEY (payment_id),
    CONSTRAINT fk_payment_reservation FOREIGN KEY (reservation_id)
        REFERENCES Reservation(reservation_id),
    CONSTRAINT uq_payment_transaction UNIQUE (transaction_ref),
    CONSTRAINT chk_payment_amount CHECK (amount >= 0),
    CONSTRAINT chk_payment_method CHECK (
        payment_method IN ('Credit Card', 'Debit Card', 'UPI', 'Net Banking', 'Cash')
    ),
    CONSTRAINT chk_payment_status CHECK (
        payment_status IN ('Paid', 'Refunded', 'Failed', 'Pending')
    )
);
